--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -48,7 +48,12 @@
 	<span class="frow">
 		<button id="submitBtn"class="btn btn-lg btn-primary mbtn" type="submit">Submit</button>
 	</span>
+	<div class="cls" style="clear"></div>
+	
+	<div id="resp">
+	</div>
 </div>
+
 
 <div id="modal-popup" class="modal">
   <!-- Modal content -->
