--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,176 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Cognizant OCR demo</title>
+<title>Cognizant OCR demo</title>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/jquery.Jcrop.min.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
-    <link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<link rel="stylesheet" href="css/bootstrap.min.css" />
+<link rel="stylesheet" href="css/jquery.Jcrop.min.css" />
+<link rel="stylesheet" href="css/main.css" />
+<link
+	href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+	rel="stylesheet">
 </head>
+
 <body class="step1">
 
 
-<div id="msg">	
-	<span class="frow">
-		<h3>Customer Registration</h3><p></p>
-	</span>
-	<span class="frow">
-	<div class="cls" style="clear"></div>
-	<div class="cls" style="clear"></div>
-		Name&nbsp;&nbsp;&nbsp;
-		<input type="text" id="name"></input>&nbsp;
-		<span class="opop" target="name">
-			<img src="img/ocr1.png" style="width:24px;height:22px;"></img>
-		</span>	
-	</span>
-	<div class="cls" style="clear"></div>
-	<span class="frow">
-		Country
-		<input type="text" id="country"></input>&nbsp;
-		<span class="opop" target="country">
-			<img src="img/ocr1.png" style="width:24px;height:22px;"></img>
+	<div id="msg">
+		<span class="frow">
+			<h3>Customer Registration</h3>
+			<p></p>
+		</span> <span class="frow">
+			<div class="cls" style=""></div>
+			<div class="cls" style=""></div> Name&nbsp;&nbsp;&nbsp; <input
+			type="text" id="name"></input>&nbsp; <span class="opop" target="name">
+				<img src="img/ocr1.png" style="width: 24px; height: 22px;"></img>
 		</span>
-	</span>	
-	<div class="cls" style="clear"></div>
-	<span class="frow">
-		SSN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<input type="text" id="ssn"></input>&nbsp;
-		<span class="opop" target="ssn">
-			<img src="img/ocr1.png" style="width:24px;height:22px;"></img>
 		</span>
-	</span>
-	<div class="cls" style="clear"></div>
-	<span class="frow">
-		<button id="submitBtn"class="btn btn-lg btn-primary mbtn" type="submit">Submit</button>
-	</span>
-	<div class="cls" style="clear"></div>
-	
-	<div id="resp">
+		<div class="cls" style=""></div>
+		<span class="frow"> Country <input type="text" id="country"></input>&nbsp;
+			<span class="opop" target="country"> <img src="img/ocr1.png"
+				style="width: 24px; height: 22px;"></img>
+		</span>
+		</span>
+		<div class="cls" style=""></div>
+		<span class="frow"> SSN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input
+			type="text" id="ssn"></input>&nbsp; <span class="opop" target="ssn">
+				<img src="img/ocr1.png" style="width: 24px; height: 22px;"></img>
+		</span>
+		</span>
+		<div class="cls" style=""></div>
+		<span class="frow">
+			<button id="submitBtn" class="btn btn-lg btn-primary mbtn"
+				type="submit">Submit</button>
+		</span>
+		<div class="cls" style=""></div>
+
+		<div id="resp"></div>
 	</div>
-</div>
 
 
-<div id="modal-popup" class="modal">
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span id="clo" class="close" style="padding:20px;">&times;</span>&nbsp;&nbsp;<p>    
-  
-<div class="container">
-    <div class="alert alert-danger"><strong>Oops!</strong> <span></span></div>
-    <div class="jumbotron">    	
-    	
-        <div id="step1">
-            <h1></h1>                        
-			<!--
-			<p class="lead">
-                Take Picture				
-                <i class="glyphicon glyphicon-question-sign help" data-placement="bottom"
-                   data-content="<img src='img/step1.png' />" data-html="true"></i>
-            </p> -->
+	<div id="modal-popup" class="modal">
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span id="clo" class="close" style="padding: 20px;"><b>&times;</b></span>&nbsp;&nbsp;
+			<p>
+			<div class="container">
+				<div class="alert alert-danger">
+					<strong>Oops!</strong> <span></span>
+				</div>
+				<div class="jumbotron">
 
-			
-            <figure class="not-ready">
-                <video autoplay></video>
-            </figure>
+					<div id="step1">
+						<figure class="not-ready">
+							<video autoplay></video>
+						</figure>
+						<img src="img/camera.png" id="takePicture" style="width: 100px; height: 100px;">
+					</div>
 
-			<img src="img/camera.png" id="takePicture" style="width:100px;height:100px;">
-			<!--
-            <button class="btn btn-lg btn-success" disabled id="takePicture">				
-				<i class="glyphicon glyphicon-camera"></i>				
-			</button>
-			-->
-        </div>
-        <div id="step2">
-			<!--
-            <h1><i class="glyphicon glyphicon-pencil"></i></h1>
-            <p class="lead">
-                Crop to select
-                <i class="glyphicon glyphicon-question-sign help" data-placement="bottom"
-                   data-content="<img src='img/step2.png' />" data-html="true"></i>
-            </p>
-			-->
+					<div id="step2">
+						<figure>
+							<canvas style="display: none"></canvas>
+							<img src="" />
+						</figure>
+						<p>Brightness: <input type="range" min="0" max="100" id="brightness" value="20"></p>
+						<p>Contrast: <input type="range" min="0" max="100" id="contrast"value="90"></p>
+						<!-- <button class="btn btn-lg btn-success" id="adjust" disabled>Read</button> -->
+						<button id="adjust" class="btn btn-lg btn-primary rbtn" disabled>Read</button>
+					</div>
+					<div id="step3">
+						<figure>
+							<canvas></canvas>
+						</figure>
+						<blockquote>
+							<p id="result"></p>
+						</blockquote>
+						<button class="btn btn-lg btn-default" id="go-back">Back</button>
+						<button class="btn btn-lg btn-default" id="start-over">Start Over</button>
+					</div>
+				</div>
 
-            <figure>
-                <canvas style="display:none"></canvas>                
-                <img src=""/>
-            </figure>			
+				<!-- <div class="header"> -->
+				<div>
+					<ul class="nav nav-pills pull-right">
+						<!-- Click -->
+						<li class="active"><a href="#" data-step="1"
+							style="width: 80px;"> <!--<img src="img/cam2.png" style="width:35px;height:27px;">-->
+								&nbsp;&nbsp; <i class="glyphicon glyphicon-camera"
+								style="font-size: 2em;"></i></a> &nbsp;&nbsp;&nbsp;</li>
+						<!-- Select -->
+						<li class="disabled"><a href="#" data-step="2"
+							style="width: 80px"> &nbsp; <img src="img/ocr3.png"
+								style="width: 34px; height: 34px;">
+						</a></li>
+						<!-- Read -->
+						<li class="disabled"><a href="#" data-step="3"
+							style="width: 80px"> &nbsp;&nbsp; <i
+								class="glyphicon glyphicon-pencil" style="font-size: 1.60em;"></i>
+								<!--<i class="glyphicon glyphicon-text-height"></i>-->
+						</a></li>
+					</ul>
+				</div>
 
-            <p>Brightness: <input type="range" min="0" max="100" id="brightness" value="20"></p>
-            <p>Contrast: <input type="range" min="0" max="100" id="contrast" value="90"></p>
-
-            <button class="btn btn-lg btn-success" id="adjust" disabled>Read</button>
-			
-        </div>
-        <div id="step3">
-			<!--
-            <h1><i class="glyphicon glyphicon-text-height"></i></h1>
-            <p class="lead">You'll find the recognized text below.</p>
-			-->	
-            <figure>
-                <canvas></canvas>
-            </figure>
-			
-            <blockquote>
-                <p id="result"></p>
-            </blockquote>
-
-            <button class="btn btn-lg btn-default" id="go-back">Back</button>
-            <button class="btn btn-lg btn-default" id="start-over">Start over</button>
-        </div>
-    </div>
-
-    <!-- <div class="header"> -->
-    <div>
-        <ul class="nav nav-pills pull-right">
-			<!-- Click -->
-            <li class="active">
-				<a href="#" data-step="1" style="width:80px;">
-			
-			<!--<img src="img/cam2.png" style="width:35px;height:27px;">-->
-				&nbsp;&nbsp;
-				<i class="glyphicon glyphicon-camera" style="font-size:2em;"></i></a>
-				&nbsp;&nbsp;&nbsp;
-			</li>
-			<!-- Select -->
-            <li class="disabled">
-				<a href="#" data-step="2" style="width:80px">
-					&nbsp;
-					<img src="img/ocr3.png" style="width:34px;height:34px;">
-				</a>
-			</li>
-			<!-- Read -->
-            <li class="disabled">
-				<a href="#" data-step="3" style="width:80px">				
-					&nbsp;&nbsp;
-					<i class="glyphicon glyphicon-pencil" style="font-size:1.60em;"></i>
-				<!--<i class="glyphicon glyphicon-text-height"></i>-->
-				</a>
-			</li>
-        </ul>        
-    </div>
-
-	<!--
+				<!--
     <div class="footer">
     </div>-->
 
-</div>
-</div>
-</div>
-<!-- /container -->
+			</div>
+		</div>
+	</div>
+	<!-- /container -->
 
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="js/vendor/modernizr.min.js"></script>
-<script src="js/vendor/bootstrap.min.js"></script>
-<script src="js/vendor/jquery.Jcrop.js"></script>
-<script src="js/vendor/ocrad.min.js"></script>
-<script src="js/vendor/glfx.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	<script src="js/vendor/modernizr.min.js"></script>
+	<script src="js/vendor/bootstrap.min.js"></script>
+	<script src="js/vendor/jquery.Jcrop.js"></script>
+	<script src="js/vendor/ocrad.min.js"></script>
+	<script src="js/vendor/glfx.min.js"></script>
 
-<script src="js/main.js"></script>
+	<script src="js/main.js"></script>
 
 </body>
 </html>
